@@ -8814,29 +8814,26 @@ expand_expr (exp, target, tmode, modifier)
 	  tree then_ = TREE_OPERAND (exp, 1);
 	  tree else_ = TREE_OPERAND (exp, 2);
 
-	  /* If the conditional has only one useful arm and that arm is an
-	     unconditional jump to a local label and we have no pending
-	     cleanups, then we can simplify the resulting INSN stream
-	     by using jumpif/jumpifnot.  */
-	  if (optimize > 0
-	      && TREE_CODE (then_) == GOTO_EXPR
-	      && TREE_CODE (GOTO_DESTINATION (then_)) == LABEL_DECL
-	      && ! NONLOCAL_LABEL (GOTO_DESTINATION (then_))
-	      && ! TREE_SIDE_EFFECTS (else_)
-	      && ! any_pending_cleanups ())
+	  /* If we do not have any pending cleanups or stack_levels
+	     to restore, and at least one arm of the COND_EXPR is a
+	     GOTO_EXPR to a local label, then we can emit more efficient
+	     code by using jumpif/jumpifnot instead of the 'if' machinery.  */
+	  if (! optimize
+	      || containing_blocks_have_cleanups_or_stack_level ())
+	    ;
+	  else if (TREE_CODE (then_) == GOTO_EXPR
+		   && TREE_CODE (GOTO_DESTINATION (then_)) == LABEL_DECL
+		   && ! NONLOCAL_LABEL (GOTO_DESTINATION (then_)))
 	    {
 	      jumpif (pred, label_rtx (GOTO_DESTINATION (then_)));
-	      return const0_rtx;
+	      return expand_expr (else_, const0_rtx, VOIDmode, 0);
 	    }
-	  else if (optimize > 0
-		   && TREE_CODE (else_) == GOTO_EXPR
+	  else if (TREE_CODE (else_) == GOTO_EXPR
 		   && TREE_CODE (GOTO_DESTINATION (else_)) == LABEL_DECL
-		   && ! NONLOCAL_LABEL (GOTO_DESTINATION (else_))
-		   && ! TREE_SIDE_EFFECTS (then_)
-		   && ! any_pending_cleanups ())
+		   && ! NONLOCAL_LABEL (GOTO_DESTINATION (else_)))
 	    {
 	      jumpifnot (pred, label_rtx (GOTO_DESTINATION (else_)));
-	      return const0_rtx;
+	      return expand_expr (then_, const0_rtx, VOIDmode, 0);
 	    }
 
 	  /* Just use the 'if' machinery.  */
