@@ -1,3 +1,7 @@
+2003-07-01  Jeff Law  <law@redhat.com>
+ 
+	* stmt.c (any_pending_cleanups): Remove another redundant test.
+
 2003-06-30  Jeff Law  <law@redhat.com>
  
 	* stmt.c (any_pending_cleanups): Lose argument THIS_CONTOUR, it
